Switch to IBM Plex Sans typeface

--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -113,7 +113,7 @@ $font-weight-bold           : 700;
 
 /* Font stacks */
 // $font-family-open-sans      : open_sans, "Helvetica Neue",​ sans-serif;
-$font-family-sans-serif     : 'Source Sans Pro', sans-serif;
+$font-family-sans-serif     : 'IBM Plex Sans', sans-serif;
 $font-family-serif          : Cambria, Georgia, Times, "Times New Roman", serif;
 $font-family-monospace      : "Bitstream Vera Sans Mono", Consolas, "Courier New", monospace;
 
