Fix styles for certifications

--- a/_sass/components/modules/_projects.scss
+++ b/_sass/components/modules/_projects.scss
@@ -66,6 +66,7 @@
         margin: $gutter 0 0 $gutter;
         width: auto;
         height: 119px;
+        border-bottom: none;
       }
     }
 
