Adapt vertical spacing

--- a/_sass/components/modules/_article.scss
+++ b/_sass/components/modules/_article.scss
@@ -9,7 +9,7 @@
   &--in-collection {
     background: $color-background;
     padding: 0 0 $gutter;
-    margin: $gutter;
+    margin: $gutter $gutter 0;
     position: relative;
 
     display: flex;
